--- a/styles/style.css
+++ b/styles/style.css
@@ -5,3 +5,16 @@ html,body{
     font-family: "Playfair Display", "Roboto", sans-serif;
 }
 
+@media screen and (max-width=400px){
+    @import url("mobile-style.css");
+    /* import mobile-style.css */
+}
+
+@media screen and (max-width=700px){
+    @import url("tablet-style.css");
+    
+}
+@media screen and (min-width=700px){
+    @import url("desktop-style.css");
+    
+}
