--- a/styles/mobile-style.css
+++ b/styles/mobile-style.css
@@ -8,11 +8,9 @@ html,body{
 body {
     display: flex;
     flex-direction: column;
+    background-image: url("../imgs/goals/bg.jpg");
 }
 
-.bg {
-    object-fit: fill;
-}
 
 .header {
     flex: 1;
@@ -20,6 +18,30 @@ body {
     flex-wrap: wrap;
 }
 
-.profile-pic img {
+.card-container {
+    max-width: 400px;
+    margin: 0 auto;
+    display: grid;
+    gap: 1rem;
+}
+
+.card {
+    background-color: dodgerblue;
+    color: white;
+    padding: 1rem;
+    height: 8rem;
+}
+
+.contact {
+    background-color: violet;
+    display: grid;
+    gap:1rem;
+}
+
+img {
     width: 100%;
+    
+}
+.text {
+    margin-left: 5px;
 }
